tests/pass/0042_sibling_scopes_do_not_share_locals.ee
fn main() {
    {
        let x = 1;
        debugPrint(x);
    }
    {
        let x = 2;
        debugPrint(x);
    }
}
