tests/fail/0040_continue_keyword_as_variable_name.ee
fn main() {
    let continue = 1;
}
